--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="lib/scenemanager.js" type="text/javascript"></script>
     <script src="sketch.js"></script>
+    <link href="./css/interactive.css" rel="stylesheet" />
   </head>
   <body>
     <main>
