--- a/info.html
+++ b/info.html
@@ -2,54 +2,162 @@
   <head>
       <meta charset="utf-8" />
       <meta name="author" content="WeTheAntibody" />
-      <meta name="description" content="Information page about misinformation myths" />
+      <meta name="description" content="Information page" />
       <title>About Myths</title>
       <link href="./css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <main>
-        <h1>MYTHS ABOUT PIGEONS</h1>
-        <p class="subtext">6 TYPES OF MISINFORMATION</p>
-        <div class="column">
-            <ul>
-              <li>
-                  <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                   width="120px" height="120px"/>
-                   <p>Parody & satire</p>
-               </li>
-              <li>
-                  <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                   width="120px" height="120px"/>
-                   <p>False Connection</p>
-               </li>
-              <li>
-                  <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                   width="120px" height="120px"/>
-                   <p>Misleading Content</p>
-               </li>
-            </ul>
-            <ul>
-              <li>
-                  <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                   width="120px" height="120px"/>
-                   <p>Fabricated Content</p>
-               </li>
-              <li>
-                  <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                   width="120px" height="120px"/>
-                   <p>False Content</p>
-               </li>
-              <li>
-                  <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                   width="120px" height="120px"/>
-                   <p>Imposter Content</p>
-               </li>
-            </ul>
+    <div id="mis0" class="">
+        <main>
+            <h1>MYTHS ABOUT PIGEONS</h1>
+            <p class="subtext">6 TYPES OF MISINFORMATION</p>
+            <div class="column">
+                <ul>
+                  <li id="mis0-mis1">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>Parody & satire</p>
+                   </li>
+                  <li id="mis0-mis2">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>False Connection</p>
+                   </li>
+                  <li id="mis0-mis3">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>Misleading Content</p>
+                   </li>
+                </ul>
+                <ul>
+                  <li id="mis0-mis4">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>Fabricated Content</p>
+                   </li>
+                  <li id="mis0-mis5">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>False Content</p>
+                   </li>
+                  <li id="mis0-mis6">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>Imposter Content</p>
+                   </li>
+                </ul>
+            </div>
+            <div id="mis0-lit0" class="arrow-east">
+                <p>Media Literacy Tools</p>
+                <img src="./assets/Arrows/arrow_east.png" alt="arrow pointing east"
+                 width="70px" height="30px"/>
+            </div>
+        </main>
+        <footer>
+            <p>Click on pigeon icons to learn about different types of misinformation</p>
+        </footer>
+    </div>
+    <div id="lit0" class="hidden">
+        <main>
+            <h1>MYTHS ABOUT PIGEONS</h1>
+            <p class="subtext">6 Media Literacy Tools</p>
+            <div class="column">
+                <ul>
+                  <li id="lit0-lit1">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>Lateral Reading</p>
+                   </li>
+                  <li id="lit0-lit2">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>Fact Checking Tools</p>
+                   </li>
+                  <li id="lit0-lit3">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>Ask Experts</p>
+                   </li>
+                </ul>
+                <ul>
+                  <li id="lit0-lit4">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>Verify Sources</p>
+                   </li>
+                  <li id="lit0-lit5">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>Reverse Image Search</p>
+                   </li>
+                  <li id="lit0-lit6">
+                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                       width="120px" height="120px"/>
+                       <p>Check Your Biases</p>
+                   </li>
+                </ul>
+            </div>
+            <div id="lit0-mis0" class="arrow-west">
+                <img src="./assets/Arrows/arrow_west.png" alt="arrow pointing west"
+                 width="70px" height="30px"/>
+                 <p>Misinformation Types</p>
+             </div>
+        </main>
+        <footer>
+            <p>Click on pigeon icons to learn about different types of misinformation</p>
+        </footer>
+    </div>
+    <div id="mis1" class="hidden">
+        <div class="header">
+            <div id="head-left">
+                <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                 width="120px" height="120px"/>
+                 <p>Parody & satire</p>
+            </div>
+            <div id="head-right">
+                <img id="mis1-mis0" src="./assets/Arrows/x.png" alt="x icon"
+                 width="30px" height="30px"/>
+            </div>
         </div>
-
-    </main>
-    <footer>
-        <p>Click on pigeon icons to learn about different types of misinformation</p>
-    </footer>
+        <div class="column">
+            <div id="col-1">
+                <h2>Definition</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                    Maecenas lobortis libero accumsan lectus ultrices volutpat gravida nec felis.<br>
+                    Nullam cursus nisi ac ligula dapibus, sit amet efficitur diam auctor.<br>
+                    Sed placerat maximus scelerisque. Nam luctus felis lectus, tempus fringilla risus tempus a.<br>
+                    Ut sodales dignissim blandit. Suspendisse suscipit nibh ut dapibus sagittis.<br>
+                    Suspendisse rhoncus enim eros, eu bibendum sem condimentum a.<br>
+                    Phasellus sapien urna, ultrices a magna vitae, vestibulum porttitor ligula.<br>
+                    Maecenas congue euismod ligula sed commodo. Vivamus volutpat dolor eget diam venenatis faucibus.<br>
+                    Donec lobortis efficitur felis. Etiam commodo pulvinar vestibulum. Nam ultricies consectetur maximus.<br>
+                    Proin posuere, massa ac laoreet tincidunt, augue metus convallis enim, eget malesuada mi ex ut magna.<br>
+                    Maecenas feugiat ligula et hendrerit auctor. Donec venenatis,<br>
+                    velit sit amet tristique congue, mauris ante lobortis nunc, ac ultrices elit justo quis elit.
+                </p>
+            </div>
+            <div id="col-2">
+                <div id="example">
+                    <h2>Example</h2>
+                    <img src="assets/Arrows/no-image.png" alt="no-image"/>
+                </div>
+                <div id="Debunk">
+                    <h2>Debunk</h2>
+                    <p>Ut in mi erat. Vivamus ultricies tempor maximus.<br>
+                        Cras eget mi vel risus auctor gravida et at mi.<br>
+                        Donec fermentum euismod sapien, dictum sollicitudin lacus aliquet nec.<br>
+                        Sed facilisis ex ut viverra semper.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div id="mis1-mis2" class="arrow-east">
+            <p>Next</p>
+            <img src="./assets/Arrows/arrow_east.png" alt="arrow pointing east"
+             width="70px" height="30px"/>
+        </div>
+    </div>
+    <script src="js/info.js"></script>
   </body>
 </html>
