--- a/info.html
+++ b/info.html
@@ -14,34 +14,34 @@
             <div class="column">
                 <ul>
                   <li id="mis0-mis1">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                      <img src="./assets/Misinfo types/1 parody.svg" alt="Pigeon"
                        width="120px" height="120px"/>
                        <p>Parody & satire</p>
                    </li>
                   <li id="mis0-mis2">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                      <img src="./assets/Misinfo types/2 false connection.svg" alt="Pigeon"
                        width="120px" height="120px"/>
                        <p>False Connection</p>
                    </li>
                   <li id="mis0-mis3">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                      <img src="./assets/Misinfo types/3 manipulated content.svg" alt="Pigeon"
                        width="120px" height="120px"/>
                        <p>Misleading Content</p>
                    </li>
                 </ul>
                 <ul>
                   <li id="mis0-mis4">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                      <img src="./assets/Misinfo types/4 fabricated content.svg" alt="Pigeon"
                        width="120px" height="120px"/>
                        <p>Fabricated Content</p>
                    </li>
                   <li id="mis0-mis5">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                      <img src="./assets/Misinfo types/5 false context.svg" alt="Pigeon"
                        width="120px" height="120px"/>
                        <p>False Content</p>
                    </li>
                   <li id="mis0-mis6">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
+                      <img src="./assets/Misinfo types/6 imposter content.svg" alt="Pigeon"
                        width="120px" height="120px"/>
                        <p>Imposter Content</p>
                    </li>
@@ -64,35 +64,35 @@
             <div class="column">
                 <ul>
                   <li id="lit0-lit1">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                       width="120px" height="120px"/>
+                      <img src="assets/Media Literacy /1 lateral reading.svg" alt="Pigeon"
+                       width="90px" height="90px"/>
                        <p>Lateral Reading</p>
                    </li>
                   <li id="lit0-lit2">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                       width="120px" height="120px"/>
+                      <img src="./assets/Media Literacy /2 fact checking.svg" alt="Pigeon"
+                       width="90px" height="90px"/>
                        <p>Fact Checking Tools</p>
                    </li>
                   <li id="lit0-lit3">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                       width="120px" height="120px"/>
+                      <img src="./assets/Media Literacy /3 ask experts.svg" alt="Pigeon"
+                       width="90px" height="90px"/>
                        <p>Ask Experts</p>
                    </li>
                 </ul>
                 <ul>
                   <li id="lit0-lit4">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                       width="120px" height="120px"/>
+                      <img src="./assets/Media Literacy /4 verify sources.svg" alt="Pigeon"
+                       width="90px" height="90px"/>
                        <p>Verify Sources</p>
                    </li>
                   <li id="lit0-lit5">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                       width="120px" height="120px"/>
+                      <img src="./assets/Media Literacy /5 reverse image search.svg" alt="Pigeon"
+                       width="90px" height="90px"/>
                        <p>Reverse Image Search</p>
                    </li>
                   <li id="lit0-lit6">
-                      <img src="./assets/Pigeon/SVG/pigeon.svg" alt="Pigeon"
-                       width="120px" height="120px"/>
+                      <img src="./assets/Media Literacy /6 emotion check.svg" alt="Pigeon"
+                       width="90px" height="90px"/>
                        <p>Check Your Biases</p>
                    </li>
                 </ul>
