--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link href="./css/interactive.css" rel="stylesheet" />
   </head>
   <body>
+        <img src="assets/loading/loading screen.gif" alt="loading screen"
+             id="p5_loading" class="loadingclass"
+             width="1200px" height="800px"/>
+        <!-- <img src="assets/loading/step 1.svg" alt="loading screen"
+             id="p5_loading" class="loadingclass"
+             width="300px" height="300px"/> -->
+        <!-- <p id="p5_loading" class="loadingclass">loading........</p> -->
     <main>
     </main>
   </body>
