--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
         <img src="assets/loading/loading screen.gif" alt="loading screen"
              id="p5_loading" class="loadingclass"
-             width="1200px" height="800px"/>
+             width="100%" height="100%"/>
         <!-- <img src="assets/loading/step 1.svg" alt="loading screen"
              id="p5_loading" class="loadingclass"
              width="300px" height="300px"/> -->
