--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <script src="lib/scenemanager.js" type="text/javascript"></script>
     <script src="sketch.js"></script>
     <link href="./css/interactive.css" rel="stylesheet" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175453882-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-175453882-1');
+    </script>
   </head>
   <body>
         <img src="assets/loading/loading screen.gif" alt="loading screen"
