--- a/info.html
+++ b/info.html
@@ -5,6 +5,15 @@
       <meta name="description" content="Information page" />
       <title>About Myths</title>
       <link href="./css/style.css" rel="stylesheet" />
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175453882-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-175453882-1');
+      </script>
   </head>
   <body>
     <div id="mis0" class="">
