--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <link href="./css/interactive.css" rel="stylesheet" />
   </head>
   <body>
+      <div id="p5_loading" class="loadingclass">
         <img src="assets/loading/loading screen.gif" alt="loading screen"
-             id="p5_loading" class="loadingclass"
-             width="1200px" height="800px"/>
-        <!-- <img src="assets/loading/step 1.svg" alt="loading screen"
-             id="p5_loading" class="loadingclass"
-             width="300px" height="300px"/> -->
-        <!-- <p id="p5_loading" class="loadingclass">loading........</p> -->
+             width="100%" height="45%"/>
+        <p>Loading...</p>
+      </div>
     <main>
     </main>
   </body>
