--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
-<html>
-  <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-    <script src="lib/scenemanager.js" type="text/javascript"></script>
-    <script src="sketch.js"></script>
-    <link href="./css/interactive.css" rel="stylesheet" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175453882-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<!DOCTYPE html>
+<html lang="en">
 
-      gtag('config', 'UA-175453882-1');
-    </script>
-  </head>
-  <body>
-      <div id="p5_loading" class="loadingclass">
-        <img src="assets/loading/loading screen.gif" alt="loading screen"
-             width="100%" height="45%"/>
-        <p>Loading...</p>
-      </div>
-    <main>
-    </main>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <title>We The Antibody</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175453882-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-175453882-1');
+  </script>
+</head>
+
+
+<body>
+  <!-- Header -->
+  <header id="header-home">
+    <div class="container">
+      <nav id="main-nav">
+        <h3>We The Antibody</h3>
+        <ul>
+          <li><a href="/" class="current">home</a></li>
+          <li><a href="interactive.html">game</a></li>
+          <li><a href="about.html">about us</a></li>
+          <li><a href="https://www.instagram.com/we.the.antibody/"><i class="fab fa-instagram"></i> </a> </li>
+        </ul>
+      </nav>
+    </div>
+    <a href="interactive.html" class="btn-dark start-btn">
+      <h2>Start</h2>
+    </a>
+  </header>
+</body>
+
 </html>
