Update about images

--- a/about.html
+++ b/about.html
@@ -71,17 +71,17 @@
             </div>
             <div class="team-pictures">
                 <div class="profile">
-                    <img src="../assets/game-start-and-end/yuansi.jpg" class="image" />
+                    <img src="assets/game-start-and-end/yuansi.jpg" class="image" />
                     <h2> Yuansi Li </h2>
                     <!-- <h4> Co-founder, experience designer</h4> -->
                 </div>
                 <div class="profile">
-                    <img src="../assets/game-start-and-end/catherine.png" class="image" />
+                    <img src="assets/game-start-and-end/catherine.png" class="image" />
                     <h2> Catherine Chang </h2>
                     <!-- <h4> Co-founder, designer, illustrator</h4> -->
                 </div>
                 <div class="profile">
-                    <img src="../assets/game-start-and-end/alex.jpg" class="image" />
+                    <img src="assets/game-start-and-end/alex.jpg" class="image" />
                     <h2> Alex Banh </h2>
                     <!-- <h4> Lead Developer</h4> -->
                 </div>
